--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="col">
                 <div class="container">
                     <div class="align-content-center justify-content-center row" style="height: 100vh;">
-                        <div class="mapContainer light">
+                        <div class="mapContainer light align-content-center justify-content-center row">
                                 
                             <div class="pixel light"></div>
                             <div class="pixel light"></div>
