--- a/index.html
+++ b/index.html
@@ -98,7 +98,24 @@
             </div>
             <div class="col">
                 <div class="container">
-
+                    <table class="table table-borderless" style="background-color: var(--surface);color: var(--onSurface);margin: 5em 0;">
+                        <thead>
+                            <tr>
+                                <td>Health</td>
+                                <td>Weapon</td>
+                                <td>Armour</td>
+                                <td>Status Effects</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>20</td>
+                                <td>Unarmed</td>
+                                <td>Unarmoured</td>
+                                <td>-</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
