--- a/index.html
+++ b/index.html
@@ -98,14 +98,18 @@
             </div>
             <div class="col">
                 <div class="container">
+
                     <div class="item-modal">
-                        <div class="info-box material undefined">
-                            <span class="info-title">Sell Price</span>
-                            <div class="info-content">
-                              <span class="info-value">55g</span>
+                        <div class="item-wrapper">
+                            <div class="info-box material undefined">
+                                <span class="info-title">Sell Price</span>
+                                <div class="info-content">
+                                    <span class="info-value">55g</span>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
