--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="col">
                 <div class="container">
                     <div class="align-content-center justify-content-center row" style="height: 100vh;">
-                        <div class="mapContainer shadow align-content-center justify-content-center row">
+                        <div class="mapContainer border-shadow align-content-center justify-content-center row">
                                 
                             <div class="pixel" style="border-radius: 6px 0 0 0;"></div>
                             <div class="pixel"></div>
@@ -99,9 +99,9 @@
             <div class="col">
                 <div class="container">
 
-                    <div class="item-modal shadow">
+                    <div class="item-modal border-shadow">
                         <div class="item-wrapper">
-                            <div class="info-box shadow undefined">
+                            <div class="info-box border-shadow">
                                 <span class="info-title">Sell Price</span>
                                 <div class="info-content">
                                     <span class="info-value">55g</span>
