--- a/index.html
+++ b/index.html
@@ -102,9 +102,27 @@
                     <div class="item-modal border-shadow">
                         <div class="item-wrapper">
                             <div class="info-box border-shadow">
-                                <span class="info-title">Sell Price</span>
+                                <span class="info-title">Health</span>
                                 <div class="info-content">
-                                    <span class="info-value">55g</span>
+                                    <span class="info-value">20</span>
+                                </div>
+                            </div>
+                            <div class="info-box border-shadow">
+                                <span class="info-title">Weapon</span>
+                                <div class="info-content">
+                                    <span class="info-value">Unarmed</span>
+                                </div>
+                            </div>
+                            <div class="info-box border-shadow">
+                                <span class="info-title">Armour</span>
+                                <div class="info-content">
+                                    <span class="info-value">Unarmoured</span>
+                                </div>
+                            </div>
+                            <div class="info-box border-shadow">
+                                <span class="info-title">Status</span>
+                                <div class="info-content">
+                                    <span class="info-value"></span>
                                 </div>
                             </div>
                         </div>
