--- a/index.html
+++ b/index.html
@@ -104,25 +104,25 @@
                             <div class="info-box border-shadow">
                                 <span class="info-title">Health</span>
                                 <div class="info-content">
-                                    <span class="info-value">20</span>
+                                    <span class="info-value" id="playerHealth">20</span>
                                 </div>
                             </div>
                             <div class="info-box border-shadow">
                                 <span class="info-title">Weapon</span>
                                 <div class="info-content">
-                                    <span class="info-value">Unarmed</span>
+                                    <span class="info-value" id="playerWeapon">Unarmed</span>
                                 </div>
                             </div>
                             <div class="info-box border-shadow">
                                 <span class="info-title">Armour</span>
                                 <div class="info-content">
-                                    <span class="info-value">Unarmoured</span>
+                                    <span class="info-value" id="playerArmour">Unarmoured</span>
                                 </div>
                             </div>
                             <div class="info-box border-shadow">
                                 <span class="info-title">Status</span>
                                 <div class="info-content">
-                                    <span class="info-value"></span>
+                                    <span class="info-value" id="playerStatus"></span>
                                 </div>
                             </div>
                         </div>
