--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             canGo(room);
                             checkRoom(room);
                             $('.title').html(window.room);
-                            $(this).replaceWith(`<div class='pixel middle'></div>`);
+                            $(this).replaceWith(`<div class='pixel middle enemy h4'></div>`);
                         " id="start">
                             <div class="h2">Start</div>
                             <div class="h2">Game</div>
