--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 
             //     if (rooms[Object.keys(rooms)[selector]]['enemy'].length == 0 && Object.keys(rooms)[selector] != '5-5') {
             //         x += 1;
-            //         rooms[Object.keys(rooms)[selector]]['enemy'].push(names[Math.floor(Math.random() * 9)]);
+            //         rooms[Object.keys(rooms)[selector]]['enemy'].push(Object.keys(foes)[Math.floor(Math.random() * 9)]);
             //     };
             // };
         </script>
