--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
                                     <span class="info-value" id="playerStatus"></span>
                                 </div>
                             </div>
+                            <div class="info-box border-shadow">
+                                <span class="info-title">Inventory</span>
+                                <div class="info-content">
+                                    <span class="info-value" id="playerInventory"></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
