--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
                             <div class="info-box border-shadow">
                                 <span class="info-title">Inventory</span>
                                 <div class="info-content">
-                                    <span class="info-value" id="playerInventory"></span>
+                                    <span class="info-value" id="playerInventory">
+                                        <button class="inventory-item" itemCatagory="weapons" itemType="Longsword">Longsword</button>
+                                        <button class="inventory-item" itemCatagory="armour" itemType="Plate">Plate</button>
+                                    </span>
                                 </div>
                             </div>
                         </div>
