--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                                 <span class="info-title">Inventory</span>
                                 <div class="info-content">
                                     <span class="info-value" id="playerInventory">
-                                        <button class="inventory-item" itemCatagory="weapons" itemType="Longsword">Longsword</button>
-                                        <button class="inventory-item" itemCatagory="armour" itemType="Plate">Plate</button>
+                                        <button class="inventory-item" itemType="Longsword">Longsword</button>
+                                        <button class="inventory-item" itemType="Plate">Plate</button>
                                     </span>
                                 </div>
                             </div>
