--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                                 <div class="info-content">
                                     <span class="info-value" id="playerInventory">
                                         <button class="inventory-item" itemType="Longsword">Longsword</button>
+                                        <button class="inventory-item" itemType="Short Spear">Short Spear</button>
                                         <button class="inventory-item" itemType="Plate">Plate</button>
                                     </span>
                                 </div>
