--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                                 <span class="info-title">Inventory</span>
                                 <div class="info-content">
                                     <span class="info-value" id="playerInventory">
-                                        <button class="inventory-item" itemType="Longsword">Longsword</button>
-                                        <button class="inventory-item" itemType="Short Spear">Short Spear</button>
-                                        <button class="inventory-item" itemType="Plate">Plate</button>
+                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Longsword">Longsword</button>
+                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Short Spear">Short Spear</button>
+                                        <button class="inventory-item" itemCatagory="Armour" itemType="Plate">Plate</button>
                                     </span>
                                 </div>
                             </div>
