--- a/index.html
+++ b/index.html
@@ -102,8 +102,13 @@
                                 <div class="info-content">
                                     <span class="info-value" id="playerInventory">
                                         <button class="inventory-item" itemCatagory="Weapon" itemType="Longsword">Longsword</button>
+                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Dagger">Dagger</button>
                                         <button class="inventory-item" itemCatagory="Weapon" itemType="Short Spear">Short Spear</button>
+                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Halberd">Halberd</button>
+                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Greatsword">Greatsword</button>
                                         <button class="inventory-item" itemCatagory="Armour" itemType="Plate">Plate</button>
+                                        <button class="inventory-item" itemCatagory="Armour" itemType="Leather">Leather</button>
+                                        <button class="inventory-item" itemCatagory="Armour" itemType="Spiked">Spiked</button>
                                     </span>
                                 </div>
                             </div>
