--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                                     </span>
                                 </div>
                             </div>
+                            <div class="info-box border-shadow row justify-content-center" style="margin-top: auto;">
+                                <button class="attack-button">Attack</button>
+                            </div>
                         </div>
                     </div>
 
