--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="item-wrapper">
                             <div class="info-box border-shadow">
                                 <span class="info-title">Health</span>
-                                <div class="info-content">
+                                <div class="info-content" style="justify-content: center;">
                                     <span class="info-value" id="playerHealth">20</span>
                                 </div>
                             </div>
@@ -100,20 +100,19 @@
                             <div class="info-box border-shadow">
                                 <span class="info-title">Inventory</span>
                                 <div class="info-content">
-                                    <span class="info-value" id="playerInventory">
-                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Longsword">Longsword</button>
-                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Dagger">Dagger</button>
-                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Short Spear">Short Spear</button>
-                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Halberd">Halberd</button>
-                                        <button class="inventory-item" itemCatagory="Weapon" itemType="Greatsword">Greatsword</button>
-                                        <button class="inventory-item" itemCatagory="Armour" itemType="Plate">Plate</button>
-                                        <button class="inventory-item" itemCatagory="Armour" itemType="Leather">Leather</button>
-                                        <button class="inventory-item" itemCatagory="Armour" itemType="Spiked">Spiked</button>
-                                    </span>
+                                    <span class="info-value" id="playerInventory"></span>
+                                </div>
+                            </div>
+                            <div class="info-box border-shadow" style="overflow: auto;">
+                                <span class="info-title">Log</span>
+                                <div class="info-content">
+                                    <span class="info-value" id="infoLog"></span>
                                 </div>
                             </div>
                             <div class="info-box border-shadow row justify-content-center" style="margin-top: auto;">
-                                <button class="attack-button">Attack</button>
+                                <div class="info-content">
+                                    <button class="attack-button">Attack</button>
+                                </div>
                             </div>
                         </div>
                     </div>
