--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             </div>
                             <div class="info-box border-shadow" style="overflow: auto;">
                                 <span class="info-title">Log</span>
-                                <div class="info-content">
+                                <div class="info-content" style="max-height: 300px;">
                                     <span class="info-value" id="infoLog"></span>
                                 </div>
                             </div>
