--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div class="info-box border-shadow">
                                 <span class="info-title">Armour</span>
                                 <div class="info-content">
-                                    <button class="info-value" id="playerArmour">Unarmoured</button>
+                                    <button class="info-value" id="playerArmour">Unarmoured<span>Dodge : 0, Defence : 0</span></button>
                                 </div>
                             </div>
                             <div class="info-box border-shadow">
