--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                             <div class="info-box border-shadow">
                                 <span class="info-title">Weapon</span>
                                 <div class="info-content">
-                                    <button class="info-value" id="playerWeapon">Unarmed</button>
+                                    <button class="info-value tip" id="playerWeapon">Unarmed</button>
                                 </div>
                             </div>
                             <div class="info-box border-shadow">
                                 <span class="info-title">Armour</span>
                                 <div class="info-content">
-                                    <button class="info-value" id="playerArmour">Unarmoured</button>
+                                    <button class="info-value tip" id="playerArmour">Unarmoured</button>
                                 </div>
                             </div>
                             <div class="info-box border-shadow">
