--- a/index.html
+++ b/index.html
@@ -82,13 +82,17 @@
                             <div class="info-box border-shadow">
                                 <span class="info-title">Weapon</span>
                                 <div class="info-content">
-                                    <button class="info-value tip" id="playerWeapon">Unarmed</button>
+                                    <span class="info-value tip" id="playerWeapon">
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Unarmed">Unarmed</button>
+                                    </span>
                                 </div>
                             </div>
                             <div class="info-box border-shadow">
                                 <span class="info-title">Armour</span>
                                 <div class="info-content">
-                                    <button class="info-value tip" id="playerArmour">Unarmoured</button>
+                                    <span class="info-value tip" id="playerArmour">
+                                        <button class="inventory-item tip" itemcatagory="Armour" itemtype="Unarmored">Unarmored</button>
+                                    </span>
                                 </div>
                             </div>
                             <div class="info-box border-shadow">
