--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <span class="info-title">Weapon</span>
                                 <div class="info-content">
                                     <span class="info-value tip" id="playerWeapon">
-                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Unarmed">Unarmed</button>
+                                        <button class="equipped-item tip" itemcatagory="Weapon" itemtype="Unarmed">Unarmed</button>
                                     </span>
                                 </div>
                             </div>
@@ -91,7 +91,7 @@
                                 <span class="info-title">Armour</span>
                                 <div class="info-content">
                                     <span class="info-value tip" id="playerArmour">
-                                        <button class="inventory-item tip" itemcatagory="Armour" itemtype="Unarmored">Unarmored</button>
+                                        <button class="equipped-item tip" itemcatagory="Armour" itemtype="Unarmored">Unarmored</button>
                                     </span>
                                 </div>
                             </div>
