--- a/index.html
+++ b/index.html
@@ -104,7 +104,20 @@
                             <div class="info-box border-shadow">
                                 <span class="info-title">Inventory</span>
                                 <div class="info-content">
-                                    <span class="info-value" id="playerInventory"></span>
+                                    <span class="info-value" id="playerInventory">
+                                        <button class="inventory-item tip" itemcatagory="Armour" itemtype="Leather">Leather</button>
+                                        <button class="inventory-item tip" itemcatagory="Armour" itemtype="Plate">Plate</button>
+                                        <button class="inventory-item tip" itemcatagory="Armour" itemtype="Spiked">Spiked</button>
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Club">Club</button>
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Dagger">Dagger</button>
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Greatsword">Greatsword</button>
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Halberd">Halberd</button>
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Longsword">Longsword</button>
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Mace">Mace</button>
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Pootis">Pootis</button>
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Spear">Short Spear</button>
+                                        <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Sword">Short Sword</button>
+                                    </span>
                                 </div>
                             </div>
                             <div class="info-box border-shadow" style="overflow: auto;">
