--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="info-box border-shadow">
                                 <span class="info-title">Weapon</span>
                                 <div class="info-content">
-                                    <span class="info-value tip" id="playerWeapon">
+                                    <span class="info-value" id="playerWeapon">
                                         <button class="equipped-item tip" itemcatagory="Weapon" itemtype="Unarmed">Unarmed</button>
                                     </span>
                                 </div>
@@ -90,8 +90,8 @@
                             <div class="info-box border-shadow">
                                 <span class="info-title">Armour</span>
                                 <div class="info-content">
-                                    <span class="info-value tip" id="playerArmour">
-                                        <button class="equipped-item tip" itemcatagory="Armour" itemtype="Unarmored">Unarmored</button>
+                                    <span class="info-value" id="playerArmour">
+                                        <button class="equipped-item tip" itemcatagory="Armour" itemtype="Unarmoured">Unarmored</button>
                                     </span>
                                 </div>
                             </div>
