--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <span class="info-title">Armour</span>
                                 <div class="info-content">
                                     <span class="info-value" id="playerArmour">
-                                        <button class="equipped-item tip" itemcatagory="Armour" itemtype="Unarmoured">Unarmored</button>
+                                        <button class="equipped-item tip" itemcatagory="Armour" itemtype="Unarmoured">Unarmoured</button>
                                     </span>
                                 </div>
                             </div>
